# baizekit-template

./: LICENSE  README.md
crates/: cargo-generate.toml
crates/{{project-name}}-core/: build.rs
crates/{{project-name}}-core/src/: lib.rs
crates/{{project-name}}-core/src/_db/: mod.rs
crates/{{project-name}}-core/src/setup/: state.rs
crates/{{project-name}}-sdk/: Cargo.toml
crates/{{project-name}}-sdk/src/: lib.rs
db/: cargo-generate.toml  {{entity}}.rs
domain/: cargo-generate.toml  repository.rs
domain/{{entity}}/: entity.rs  mod.rs  repository.rs
repository/: cargo-generate.toml
service-core/: cargo-generate.toml
service-core/{{entity}}/: http.rs  mod.rs  svc.rs
service-crate/: cargo-generate.toml
service-crate/{{project-name}}-core/: Cargo.toml
service-crate/{{project-name}}-core/src/_db/: mod.rs
service-crate/{{project-name}}-core/src/service/{{entity}}/: http.rs
service-crate/{{project-name}}-core/src/setup/: mod.rs  state.rs
service-crate/{{project-name}}-sdk/src/: error.rs
service-crate/{{project-name}}-sdk/src/service/: {{entity}}.rs
service-crate/{{service}}-core/: Cargo.toml
service-crate/{{service}}-core/src/_db/: {{entity}}.rs
service-crate/{{service}}-core/src/domain/: mod.rs
service-crate/{{service}}-core/src/setup/: state.rs
service-crate/{{service}}-sdk/: Cargo.toml
service-sdk/: cargo-generate.toml  {{entity}}.rs
service-trait/: cargo-generate.toml  service.rs  {{entity}}.rs
service-trait-impl/: cargo-generate.toml  http.rs
service-trait-impl/{{entity}}/: svc.rs
(+5 files in other folders)
